--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "edgio-format-v1-nextjs",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && cp ./handler.mjs ./.next/standalone/handler.mjs",
     "start": "next start",
     "lint": "next lint"
   },
